2018-04-xx Paul Dreik <rdfind@pauldreik.se>
	* placeholder for 1.4.0
	* cleanup of source to remove compiler warnings
	  and switch to c++11
2017-01-04 Paul Dreik <rdfind@pauldreik.se>
	* release 1.3.5
	* source cleanup like removing obsolete comments, formatting.
	* fix man page typo on dryrun
	* console output showing how much space that can be saved
	  is now properly capitalized. as you may have noted, I do not
          really like uppercase...
        * make check now works again (for some reason, it broke. maybe
          due to autotools updates)
2014-08-23 Paul Dreik <rdfind@pauldreik.se>
	* fix bug in using sha1 even if md5 is selected
2013-06-19  Paul Dreik  <rdfind@pauldreik.se>
	* release of 1.3.4
	workaround for unit test for filesize which did not run on Hurd
	because of insufficient large file support. See the discussion on
	debian bug #711793. no other changes.
2013-06-18  Paul Dreik  <rdfind@pauldreik.se>
	* release of 1.3.3
	now builds on GNU/Hurd (see debian bug #711793) using the patch by
	Pino Toscano. Thanks!
	large file problem on 32 bit solved.
2013-06-03  Paul Dreik <rdfind@pauldreik.se>
	* applied patch for building on GNU/Hurd, by Pino Toscano
2013-01-31  Paul Dreik  <rdfind@pauldreik.se>
	* added testing. currently the only test is to verify that the
	  large file problem is solved.
2013-01-26  Paul Dreik  <rdfind@pauldreik.se>
	* prerelease of 1.3.3
	* working with large file problems on 32 bit ubuntu,
	  with large files being ignored by rdfind due to lstat
	  returning error. There are also printing problems
	  reporting total file size on stdout when running which
	  hopefully are solved now.
2012-11-27  Paul Dreik  <rdfind@pauldreik.se>
	* corrected typo in manpage example, which incorrectly used
	-deletefiles instead of -deleteduplicates. Thanks KC for reporting
	this!
	* release of 1.3.2
2012-05-07  Paul Dreik  <rdfind@pauldreik.se>
	* release of 1.3.1. No changes except the gcc 4.7 related changes.