@@ -2,6 +2,8 @@
 	* placeholder for 1.4.0
 	* cleanup of source to remove compiler warnings
 	  and switch to c++11
+	* failure of making hard links will not delete the deduplicated file, if
+	  possible. See Github bug #5.
 2017-01-04 Paul Dreik <rdfind@pauldreik.se>
 	* release 1.3.5
 	* source cleanup like removing obsolete comments, formatting.
